--- a/frontend/src/Subwindow.css
+++ b/frontend/src/Subwindow.css
@@ -1,43 +1,50 @@
 .subscription-window {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #050505; /* Set background color of the entire window */
-  }
-  
-  .subscription-container {
-    border-radius: 10px; /* Add border radius for rounded corners */
-    padding: 20px; /* Add padding inside the container */
-  }
-  
-  .subscription-item {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px; /* Add margin between subscription items */
-  }
-  
-  .subscription-image {
-    width: 100px; /* Adjust image*/
-    height: auto; 
-    margin-right: 20px; /* Add margin between image and details */
-  }
-  
-  .subscription-details {
-    flex: 1; /* Take remaining space */
-    font-size: 14px;
-  }
-  
-  .cancel-button {
-    padding: 10px 20px; /* Add padding to the button */
-    background-color: #ff6347; /* Set background color of the button */
-    color: rgb(17, 2, 2); /* Set text color of the button */
-    border: none; /* Remove border */
-    border-radius: 5px; /* Add border radius */
-    cursor: pointer; /* Change cursor to pointer on hover */
-  }
-  
-  .cancel-button:hover {
-    background-color: #ff4838; /* Darker color on hover */
-  }
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: #050505; /* Set background color of the entire window */
+}
+
+.container {
+  max-width: 1200px; /* Set maximum width for the content */
+  margin: 0 auto; /* Center the container horizontally */
+  padding: 20px; /* Add padding inside the container */
+}
+
+.subscription-container {
+  border-radius: 10px; /* Add border radius for rounded corners */
+  overflow-y: auto; /* Enable vertical scrolling */
+  max-height: 100vh; /* Calculate max-height based on viewport height minus padding */
+}
+
+.subscription-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 35px; /* Add margin between subscription items */
+  padding:25px
+}
+
+.subscription-image {
+  width: 100px; /* Adjust image width */
+  height: auto; /* Maintain aspect ratio */
+  margin-right: 75px; /* Add margin between image and details */
+}
+
+.subscription-details {
+  flex: 1; /* Take remaining space */
+  font-size: 15px; /* Adjust font size */
+}
+
+.cancel-button {
+  padding: 10px 20px; /* Add padding to the button */
+  background-color: #ff6347; /* Set background color of the button */
+  color: rgb(17, 2, 2); /* Set text color of the button */
+  border: none; /* Remove border */
+  border-radius: 5px; /* Add border radius */
+  cursor: pointer; /* Change cursor to pointer on hover */
+}
+
+.cancel-button:hover {
+  background-color: #ff4838; /* Darker color on hover */
+}
