--- a/frontend/src/userprofile.css
+++ b/frontend/src/userprofile.css
@@ -1,12 +1,21 @@
 .profile-container {
-    position: fixed; /* Position the container */
-    top: 20px; /* Align to the top */
-    left: 20px; /* Align to the left */
-    display: flex;
-    align-items: center; /* Align items vertically */
-  }
-  
-  .avatar {
-    margin-right: 10px; /* Margin to the right of the image */
-  }
-  
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  display: flex;
+  flex-direction: column; 
+  align-items: center;
+}
+
+.avatar {
+  width: 150px; 
+  height: 150px;
+  border-radius: 50%;
+  margin-bottom: 10px; 
+}
+
+.profile-name {
+  margin-top: 0;
+  margin-bottom: 0; 
+  font-size: 35px; 
+}
